12월28일 프로젝트
수정함

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/MAPS/TESTMAP.TESTMAP
-EditorStartupMap=/Game/MAPS/TESTMAP.TESTMAP
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GameDefaultMap=/Game/MAPS/TestMap2.TestMap2
+EditorStartupMap=/Game/MAPS/TestMap2.TestMap2
+GlobalDefaultGameMode=/Game/BluePrint/BP_PortalGameMode.BP_PortalGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
