1월 2일 수정본
언리얼

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D92D65FE481CC3098A2BD1A861716165
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+
